--- a/markdown test.Rmd
+++ b/markdown test.Rmd
@@ -1,4 +1,15 @@
+---
+title: "markdown_test"
+output: pdf_document
+---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+
+
+```{r, results ='asis', echo = FALSE, message = FALSE}
 # source the export_anova.R script to get function in environment
 source("C:/R Projects/export-anova/export_anova.R")
 
@@ -10,7 +21,9 @@ renames <- data.frame(old = c("Sepal.Width", "Petal.Length"),
                       new = c("Sepal Width", "Petal Length"))
 
 # a place to put the table
-file = "C:/R Projects/export-anova/test_table.pdf"
+# file = "C:/R Projects/export-anova/test_table.pdf"
 
-export_anova(mod = mod, file = file, pnames = renames)
+export_anova(mod = mod, # file = file, 
+             pnames = renames)
+```
 
